--- a/src/components/language/languages/fa.json
+++ b/src/components/language/languages/fa.json
@@ -7,5 +7,8 @@
     "Planning":"برنامه ریزی",
     "Exclusive":"تخصصی",
     "Other":"سایر",
-    "Integrated Management System":"سامانه جامع مدیریت منابع"
+    "Integrated Management System":"سامانه جامع مدیریت منابع",
+    "Employee System": "سیستم کارگزینی",
+    "Absent System": "سیستم حضورغیاب",
+    "Evaluation System": "سیستم ارزشیابی کارکنان"
 }
