--- a/src/components/language/languages/ar.json
+++ b/src/components/language/languages/ar.json
@@ -7,5 +7,5 @@
     "Planning":"البرنامه ریزی",
     "Exclusive":"التخصصی",
     "Other":"السایر",
-    "Integrated Management System":"السامانه الجامع المدیریت المنابع"
+    "Integrated Resource Management System":"السامانه الجامع المدیریت المنابع"
 }
