--- a/src/components/language/languages/fa.json
+++ b/src/components/language/languages/fa.json
@@ -7,5 +7,5 @@
     "Planning":"برنامه ریزی",
     "Exclusive":"تخصصی",
     "Other":"سایر",
-    "Integrated Management System":"سامانه جامع مدیریت منابع"
+    "Integrated Resource Management System":"سامانه جامع مدیریت منابع"
 }
