--- a/src/components/language/languages/fa.json
+++ b/src/components/language/languages/fa.json
@@ -7,7 +7,7 @@
     "Planning":"برنامه ریزی",
     "Exclusive":"تخصصی",
     "Other":"سایر",
-    "Integrated Management System":"سامانه جامع مدیریت منابع",
+    "Integrated Management System":"سامانه جامع مدیریت منابع سازمان",
     "Login To System": "ورود به سامانه",
     "Login": "ورود",
     "Remember me": "من را به خاطر بسپار",
