--- a/src/components/language/languages/fa.json
+++ b/src/components/language/languages/fa.json
@@ -28,5 +28,9 @@
     "AcademicEducation":"سوابق تحصیلی",
     "Child":"اطلاعات فرزندان",
     "Parent":"اطلاعات والدین",
-    "Employee":"اطلاعات کارمند"
+    "Employee":"اطلاعات کارمند",
+    "id": "شناسه",
+    "title": "عنوان",
+    "phoneNo": "شماره تلفن",
+    "address": "نشانی"
 }
