--- a/src/components/language/languages/fa.json
+++ b/src/components/language/languages/fa.json
@@ -34,5 +34,6 @@
     "title": "عنوان",
     "phoneNo": "شماره تلفن",
     "address": "نشانی",
-    "The Token has expired on": "توکن ارسالی منقضی شده است. تاریخ پایان اعتبار : "
+    "The Token has expired on": "توکن ارسالی منقضی شده است. تاریخ پایان اعتبار : ",
+    "Search":"جستجو"
 }
